# Vindicta

./: .env.example  .gitignore  README.md  Text File.txt  docker-compose.yml  install-desktop-shortcut.sh  start-vindicta.sh  vercel.json  vindicta-ai.desktop
Additional/files/: AuthScreen.jsx  GlitchButton.jsx  README.md  ScanField.jsx  ScanningIris.jsx  ScrambleText.jsx  ScrollReveal.jsx  ShutterCard.jsx  TerminalLog.jsx  vindicta.theme.js
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py  neo4j_client.py  redis_client.py
backend/app/api/v1/: auth.py  dashboard.py  graph.py  investigations.py  phone.py  reports.py  router.py  search.py  timeline.py  users.py  web.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  phone.py  web.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  phone_lookup.py  web_sync.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/graph/: graph-client.tsx  page.tsx
frontend/src/app/investigations/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/phone/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/hooks/: useInView.ts  useScrambleText.ts
frontend/src/lib/: api.ts  auth.ts  graph-paint.ts  motion.ts  types.ts
frontend/src/stores/: auth-store.ts  web-store.ts
(+34 files in other folders)
