[project]
name = "vindicta-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic[email]==2.10.3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "httpx==0.28.1",
    "redis==5.2.1",
    "neo4j==5.27.0",
    "python-multipart==0.0.20",
    "authlib==1.4.0",
    "itsdangerous==2.2.0",
]

[tool.vercel]
entrypoint = "app.main:app"
